--- a/configs/mnist_ebm.yaml
+++ b/configs/mnist_ebm.yaml
@@ -1,23 +1,74 @@
-log_dir: logs/
+
+_target_: src.models.EBM
+_recursive_: false  
 
 train:
-  batch_size: 32
-  epochs: 1000
-  lr: 0.001
+  batch_size: 128
+  epochs: 300
+  accelerator: "cuda"
+  devices: 1
+  precision: 16
+  strategy: "auto"
+  optimizer:
+    _target_: torch.optim.Adam
+    lr: 0.001
+    weight_decay: 0.
+    betas: [0.9, 0.999]
 
-model:
-  pretrained_ckpt: /Users/ipeaz/Documents/GitHub/HackathonEBM/logs/EBM_Hackathon/7ptt5c4b/checkpoints/epoch=138-step=129965.ckpt
-  input_dim: 784
-  hidden_dims: [128,128]
+model:  
+  input_size: [28,28]
+  input_dim: 1
+  num_samples: 10
+  lambda_grad: 0.1
 
+  energy_net:
+    _target_: src.layers.MLP
+    input_dim: 784
+    hidden_dims: [512, 512]
+    output_dim: 1
+    batch_norm: False
+  
+  sampler:
+    _target_: src.samplers.SGLD
+    step_size: 5e-5
+    n_iter: 50
+    noise_std: 5e-3
+    clamp_min: -1.0
+    clamp_max: 1.0
+    tau: 5e-3
+
+# Shared data params
 data:
-  name: 'mnist'
+  _target_: src.data.MyMNIST
+  root: "mnist/"
+  download: True
+  transform:
+    _target_: torchvision.transforms.Compose
+    transforms:
+      - _target_: torchvision.transforms.ToTensor
+      - _target_: torchvision.transforms.Normalize
+        mean: [0.5]
+        std: [0.5]
+      
+# Specific split params
+train_data:
+    train: True
+val_data:
+    train: False
+
+dataloader:
+  _target_: torch.utils.data.DataLoader
+  batch_size: ${train.batch_size}
+  num_workers: 4
+  pin_memory: True
+
 
 callbacks:
-  image_correct_samples: 
-    num_samples: 16
+  image_samples: 
+    _target_: src.callbacks.ImageSamples
+    num_samples: 64
     every_n_epochs: 1
-  image_correct_reconstruction:
-    num_images: 8
-    every_n_epochs: 1  
+
+
+
 
