--- a/configs/mnist_miwae.yaml
+++ b/configs/mnist_miwae.yaml
@@ -26,8 +26,8 @@ model:
 
   encoder:
     _target_: src.layers.ConvEncoder
-    input_channels: ${model.input_dim}
-    input_size: ${model.input_size}
+    input_channels: ${data.dim}
+    input_shape: ${data.shape}
     latent_dim: 64
     hidden_channels: [64, 64, 128]
     kernel_sizes: [4, 4, 4]
@@ -38,8 +38,8 @@ model:
   decoder:
     _target_: src.layers.ConvDecoder
     latent_dim: ${model.encoder.latent_dim}
-    output_channels: ${model.input_dim}
-    output_size: ${model.input_size}
+    output_channels: ${data.dim}
+    output_size: ${data.shape}
     hidden_channels: ${reverse:${model.encoder.hidden_channels}}
     kernel_sizes: ${reverse:${model.encoder.kernel_sizes}}
     strides: ${reverse:${model.encoder.strides}}
